<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="@color/fragment_tausta" >
    <LinearLayout
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		<TextView
	    	android:id="@+id/risteilyfeed_instagram"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/risteilyfeed_instagram_text"
	    	android:textSize="16sp"
	    	android:layout_weight="1"
	    	android:textAlignment="center"
	    	android:gravity="center"
	    	android:layout_gravity="center"
	    	android:textColor="@color/white" />
		<ImageView
		    android:id="@+id/image_instagram"
		    android:clickable="true"
    	    android:layout_width="48dp"
        	android:layout_height="48dp"
        	android:padding="4dp"
        	android:src="@drawable/instagram"
        	android:scaleType="fitCenter"
        	android:adjustViewBounds="true"/>
	</LinearLayout>
	<TextView
    	android:id="@+id/risteilyfeed_disclaimer"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/risteilyfeed_disclaimer_text"
    	android:textAlignment="center"
    	android:layout_gravity="center"
    	android:padding="16dp"
    	android:gravity="center"
    	android:textSize="16sp"
    	android:textColor="#7c7c7c" />
	<Button
	    android:id="@+id/risteilyfeed_button_ok"
	    android:padding="0dp"
	    android:layout_marginBottom="32dp"
	    android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
    <WebView
        android:id="@+id/feedView"
        android:layout_weight="1"
		android:layout_width="match_parent"
		android:layout_height="0dp" />
    
</LinearLayout>